--- a/nums_device_emb.ipynb
+++ b/nums_device_emb.ipynb
@@ -2,34 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "28a79ce2-8b76-45b1-abbd-cb6a9acb5c3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preparing embeddings for devices + numerical features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8bd520d0-340c-47f5-9121-ae7a32d40271",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: umap-learn in /opt/conda/lib/python3.7/site-packages (0.5.3)\n",
-      "Requirement already satisfied: scikit-learn>=0.22 in /opt/conda/lib/python3.7/site-packages (from umap-learn) (1.0.2)\n",
-      "Requirement already satisfied: pynndescent>=0.5 in /opt/conda/lib/python3.7/site-packages (from umap-learn) (0.5.9)\n",
-      "Requirement already satisfied: tqdm in /opt/conda/lib/python3.7/site-packages (from umap-learn) (4.64.1)\n",
-      "Requirement already satisfied: scipy>=1.0 in /opt/conda/lib/python3.7/site-packages (from umap-learn) (1.7.3)\n",
-      "Requirement already satisfied: numpy>=1.17 in /opt/conda/lib/python3.7/site-packages (from umap-learn) (1.21.6)\n",
-      "Requirement already satisfied: numba>=0.49 in /opt/conda/lib/python3.7/site-packages (from umap-learn) (0.56.4)\n",
-      "Requirement already satisfied: setuptools in /opt/conda/lib/python3.7/site-packages (from numba>=0.49->umap-learn) (67.6.1)\n",
-      "Requirement already satisfied: importlib-metadata in /opt/conda/lib/python3.7/site-packages (from numba>=0.49->umap-learn) (6.0.1)\n",
-      "Requirement already satisfied: llvmlite<0.40,>=0.39.0dev0 in /opt/conda/lib/python3.7/site-packages (from numba>=0.49->umap-learn) (0.39.1)\n",
-      "Requirement already satisfied: joblib>=0.11 in /opt/conda/lib/python3.7/site-packages (from pynndescent>=0.5->umap-learn) (1.2.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/conda/lib/python3.7/site-packages (from scikit-learn>=0.22->umap-learn) (3.1.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.4 in /opt/conda/lib/python3.7/site-packages (from importlib-metadata->numba>=0.49->umap-learn) (4.5.0)\n",
-      "Requirement already satisfied: zipp>=0.5 in /opt/conda/lib/python3.7/site-packages (from importlib-metadata->numba>=0.49->umap-learn) (3.15.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install umap-learn"
+    "# pip install umap-learn"
    ]
   },
   {
@@ -179,34 +167,34 @@
     }
    ],
    "source": [
-    "%%bigquery users_int_watch\n",
-    "select event_date, event_timestamp, user_id, device.category as device_type,\n",
-    "    device.mobile_brand_name as device_brand,\n",
-    "    device.mobile_model_name as device_model,\n",
-    "    device.operating_system as device_os,\n",
-    "    device.operating_system_version as device_os_version,\n",
-    "    h.key as key,\n",
-    "    h.value.string_value as client_id,\n",
-    "    ev.key as event_key,\n",
-    "    ev.value.string_value as event_params,\n",
-    "    event_name\n",
-    "from `vertex-ai-sandbox-380023.analytics_250000498.events_*` \n",
-    "left join unnest(user_properties) as h\n",
-    "left join unnest(event_params) as ev\n",
-    "where h.key = \"client_id\"\n",
-    "    and ev.key = \"page_location\"\n",
-    "    and h.value.string_value in (\n",
-    "        SELECT distinct(h.value.string_value) as client_id,\n",
-    "        FROM `vertex-ai-sandbox-380023.analytics_250000498.events_*` \n",
-    "        left join unnest(user_properties) as h\n",
-    "        left join unnest(event_params) as ev\n",
-    "        where h.key = \"client_id\"\n",
-    "            and ev.key = \"page_location\"\n",
-    "            and ev.value.string_value like '%watch%'\n",
-    "            and h.value.string_value is not null\n",
-    "            and event_date between \"20220810\"\n",
-    "            and \"20220930\")\n",
-    "     and event_date between \"20220810\" and \"20220930\""
+    "# %%bigquery users_int_watch\n",
+    "# select event_date, event_timestamp, user_id, device.category as device_type,\n",
+    "#     device.mobile_brand_name as device_brand,\n",
+    "#     device.mobile_model_name as device_model,\n",
+    "#     device.operating_system as device_os,\n",
+    "#     device.operating_system_version as device_os_version,\n",
+    "#     h.key as key,\n",
+    "#     h.value.string_value as client_id,\n",
+    "#     ev.key as event_key,\n",
+    "#     ev.value.string_value as event_params,\n",
+    "#     event_name\n",
+    "# from `vertex-ai-sandbox-380023.analytics_250000498.events_*` \n",
+    "# left join unnest(user_properties) as h\n",
+    "# left join unnest(event_params) as ev\n",
+    "# where h.key = \"client_id\"\n",
+    "#     and ev.key = \"page_location\"\n",
+    "#     and h.value.string_value in (\n",
+    "#         SELECT distinct(h.value.string_value) as client_id,\n",
+    "#         FROM `vertex-ai-sandbox-380023.analytics_250000498.events_*` \n",
+    "#         left join unnest(user_properties) as h\n",
+    "#         left join unnest(event_params) as ev\n",
+    "#         where h.key = \"client_id\"\n",
+    "#             and ev.key = \"page_location\"\n",
+    "#             and ev.value.string_value like '%watch%'\n",
+    "#             and h.value.string_value is not null\n",
+    "#             and event_date between \"20220810\"\n",
+    "#             and \"20220930\")\n",
+    "#      and event_date between \"20220810\" and \"20220930\""
    ]
   },
   {
@@ -608,9 +596,9 @@
  "metadata": {
   "environment": {
    "kernel": "python3",
-   "name": "common-cpu.m107",
+   "name": "common-cpu.m104",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/base-cpu:m107"
+   "uri": "gcr.io/deeplearning-platform-release/base-cpu:m104"
   },
   "kernelspec": {
    "display_name": "Python 3",
