--- a/pages_emb.ipynb
+++ b/pages_emb.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "b7ea14b5-b331-448b-9931-e4602798a17d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preparing pages embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f203244f-77d8-4e65-ba8f-b310b98ab1e6",
    "metadata": {},
    "outputs": [],
@@ -20,21 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "62da2599-a1ea-4986-bdc5-20238a146bf5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2023-04-20_AUG'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "from datetime import date\n",
@@ -46,39 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a4027c9f-a460-418c-ab36-c6fb3b67263a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a869b6f871f4ef2821aa575fb8beaf1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Query is running:   0%|          |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6e3ff59fc534165a7e28849d25fb07e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bigquery users_int_watch\n",
     "\n",
@@ -90,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ee04c13b-5473-41d5-9961-cb380df7646e",
    "metadata": {},
    "outputs": [],
@@ -104,21 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9cb231f0-240d-4fdc-a3b7-49df689f8317",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/ipykernel_launcher.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
-      "/opt/conda/lib/python3.7/site-packages/ipykernel_launcher.py:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  after removing the cwd from sys.path.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# users_page_loc = users_int_watch[[\"event_timestamp\", \"client_id\", \"event_params\"]].copy()\n",
     "users_page_loc[\"list_val\"] = users_page_loc[\"event_params\"]\\\n",
@@ -131,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "282cf92a-e855-405a-be29-77ee9a90d9d0",
    "metadata": {},
    "outputs": [],
@@ -146,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "08ae70d4-d0d9-4e9f-8219-c50667d55bc4",
    "metadata": {},
    "outputs": [],
@@ -165,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2cbba7cd-9cba-4db9-a8d9-3273f8f1708f",
    "metadata": {},
    "outputs": [],
@@ -175,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "92f2b0e4-01e6-417e-bfd2-5b2e9decc102",
    "metadata": {},
    "outputs": [],
@@ -187,21 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "41f55da5-05e9-4401-a0ec-6665aea8b4b7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1231"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# getting the list for features and selecting them in the dataset\n",
     "shorter_list = list(grouped[grouped[\"event_timestamp\"] > 250][\"list_val\"])\n",
@@ -212,156 +160,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ef75093e-76e3-4c51-9fe6-777eaf337826",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>list_val</th>\n",
-       "      <th>client_id</th>\n",
-       "      <th></th>\n",
-       "      <th>-signage</th>\n",
-       "      <th>-the-smartthings</th>\n",
-       "      <th>-tv</th>\n",
-       "      <th>03</th>\n",
-       "      <th>07</th>\n",
-       "      <th>08</th>\n",
-       "      <th>1</th>\n",
-       "      <th>1-door-fridge+1-door-freezer</th>\n",
-       "      <th>...</th>\n",
-       "      <th>yrepair</th>\n",
-       "      <th>ys20</th>\n",
-       "      <th>ys21</th>\n",
-       "      <th>ys22</th>\n",
-       "      <th>yssey-ark</th>\n",
-       "      <th>yssey-gaming</th>\n",
-       "      <th>ysterygift</th>\n",
-       "      <th>z-flip-3</th>\n",
-       "      <th>z-flip-4</th>\n",
-       "      <th>z-fold-4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>GA1000005573.1660564767</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GA1000006043.1662226876</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>GA1000016851.1650990087</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3 rows × 1232 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "list_val                client_id     -signage  -the-smartthings  -tv  03  07  \\\n",
-       "0         GA1000005573.1660564767  0         0                 0    0   0   0   \n",
-       "1         GA1000006043.1662226876  0         0                 0    0   0   0   \n",
-       "2         GA1000016851.1650990087  0         0                 0    0   0   0   \n",
-       "\n",
-       "list_val  08  1  1-door-fridge+1-door-freezer  ...  yrepair  ys20  ys21  ys22  \\\n",
-       "0          0  0                             0  ...        0     0     0     0   \n",
-       "1          0  0                             0  ...        0     0     0     0   \n",
-       "2          0  0                             0  ...        0     0     0     0   \n",
-       "\n",
-       "list_val  yssey-ark  yssey-gaming  ysterygift  z-flip-3  z-flip-4  z-fold-4  \n",
-       "0                 0             0           0         0         0         0  \n",
-       "1                 0             0           0         0         0         0  \n",
-       "2                 0             0           0         0         0         0  \n",
-       "\n",
-       "[3 rows x 1232 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# preparing features for pages location\n",
     "\n",
@@ -373,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "8addb8f2-88c0-4662-99b8-c3e88a9ca982",
    "metadata": {},
    "outputs": [],
@@ -383,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "28a67517-6c78-46cb-8d3f-981b04156fa6",
    "metadata": {},
    "outputs": [],
@@ -393,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "90b8bca4-8846-43ec-b300-f8ba6987419d",
    "metadata": {},
    "outputs": [],
@@ -408,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "98fb449d-4cd7-4f4b-b2c3-545c1409ebe0",
    "metadata": {},
    "outputs": [],
@@ -420,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "962499d2-3f24-4d30-ac86-24e3d7414512",
    "metadata": {},
    "outputs": [],
@@ -432,22 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "6e2bad23-61d8-4c9a-b381-ee97e4636d5d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<470867x1231 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 3642282 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pages with no events\n",
     "\n",
@@ -457,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "8d15a09c-80f6-42fa-bc7c-8e80fd7f9f3b",
    "metadata": {},
    "outputs": [],
@@ -472,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "57eeaf42-cdc8-4aad-8179-c443fecb68c4",
    "metadata": {},
    "outputs": [],
@@ -484,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "27731dec-21c0-45ec-87d3-e4339d9aaa3c",
    "metadata": {},
    "outputs": [],
@@ -494,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "98cd0c9a-b503-43f3-a50d-c545aa3ad339",
    "metadata": {},
    "outputs": [],
@@ -504,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3a68a93d-97b6-4255-bace-d0d0f6d7eef8",
    "metadata": {},
    "outputs": [],
@@ -514,22 +304,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1d4a3b0d-e0f2-43ca-91c1-1d2b7ab793f7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<470867x1264 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 7582467 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pages with events\n",
     "\n",
@@ -547,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2d4d233f-bfd2-426e-a8d6-2653d27ee5b7",
    "metadata": {},
    "outputs": [],
@@ -609,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fea65af9-9de7-4370-9e55-6c4b20a06602",
    "metadata": {},
    "outputs": [],
@@ -621,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0ec03fc5-8925-42e7-bae8-1669aab266a4",
    "metadata": {},
    "outputs": [],
@@ -631,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "64e8d12b-9711-41e2-940a-4e71ed06e75c",
    "metadata": {},
    "outputs": [],
@@ -646,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fc879215-e181-432e-b041-27dbd7a92d06",
    "metadata": {},
    "outputs": [],
@@ -658,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bcdd011c-451b-4b51-b936-1cf905d2be7e",
    "metadata": {},
    "outputs": [],
@@ -668,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9eeefc4b-f7b2-4b6e-8136-9d7f0bd612e0",
    "metadata": {},
    "outputs": [],
@@ -678,33 +456,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "61f0361a-b433-4249-9353-6c27eea1d51c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.45520726,  0.13873598,  0.08333354, ...,  0.32691413,\n",
-       "         0.19069465,  0.20316166],\n",
-       "       [-0.3177475 ,  0.19344643, -0.28470463, ...,  0.0508442 ,\n",
-       "         0.28877413,  0.36312926],\n",
-       "       [ 0.11708989,  0.24594127,  0.1641519 , ..., -0.03351207,\n",
-       "         0.2529514 ,  0.23886593],\n",
-       "       ...,\n",
-       "       [ 0.1479645 ,  0.1541693 , -0.05395691, ...,  0.19559585,\n",
-       "        -0.21802935,  0.17884007],\n",
-       "       [ 0.07072264,  0.02906802,  0.09110802, ..., -0.28478867,\n",
-       "         0.48986122,  0.0637826 ],\n",
-       "       [-0.13494992,  0.11950903, -0.4279345 , ..., -0.10255455,\n",
-       "         0.11548845, -0.29830557]], dtype=float32)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "user_emb_page"
    ]
@@ -713,9 +468,9 @@
  "metadata": {
   "environment": {
    "kernel": "python3",
-   "name": "common-cpu.m107",
+   "name": "common-cpu.m104",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/base-cpu:m107"
+   "uri": "gcr.io/deeplearning-platform-release/base-cpu:m104"
   },
   "kernelspec": {
    "display_name": "Python 3",
