--- a/umap_on_emb.ipynb
+++ b/umap_on_emb.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ed76eb51-3615-45c7-bb97-ae88e4432c5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Running UMAP on prepared embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "2f512b6f-55d6-41c1-af7c-7ff0cb7d67f7",
    "metadata": {},
@@ -85,9 +95,9 @@
  "metadata": {
   "environment": {
    "kernel": "python3",
-   "name": "common-cpu.m107",
+   "name": "common-cpu.m104",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/base-cpu:m107"
+   "uri": "gcr.io/deeplearning-platform-release/base-cpu:m104"
   },
   "kernelspec": {
    "display_name": "Python 3",
